insert figma, fix nap container size, fix menu collapse

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -34,9 +34,9 @@ h1 {
 	display: flex;
 	justify-content: center;
 }
-.login-btn {
+/* .login-btn {
   
-}
+} */
 .figma-embed {
 	position: relative;
 	width: 100%;
